# gnome-shell-extension-just-perfection

./: meson.build  meson_options.txt  ppa.md
debian/: changelog  control  copyright  rules
just-perfection/: meson.build
just-perfection/just-perfection-desktop@just-perfection/: metadata.json
