install_subdir('just-perfection-desktop@just-perfection',
    install_dir: join_paths(get_option('prefix'), 'share/gnome-shell/extensions')
)

install_data(
  'just-perfection-desktop@just-perfection/schemas/org.gnome.shell.extensions.just-perfection.gschema.xml',
  install_dir: join_paths(get_option('prefix'), 'share/glib-2.0/schemas')
  
)
